# RotatingTriangle

./: .gitignore  CMakeLists.txt
src/: main.c
